# BlurIT

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  Dockerfile  README.md  customvideoplayer.cpp  customvideoplayer.h  facedetectionfilter.cpp  facedetectionfilter.h  facedetector.cpp  facedetector.h  icon.qrc  icon1.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Assets/: logo.icns
CMakeFiless/: AddIconToBinary.cmake
Styles/: SyNet.qss
